OK, last 1.5 dependencies removed
git-svn-id: https://svn.apache.org/repos/asf/incubator/wicket/trunk@458463 13f79535-47bb-0310-9956-ffa450edef68